--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-25-06",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Abhinesh612.github.com/Abhinesh-porfolio/",
+  "homepage": "http://abhinesh612.github.io/Abhinesh-porfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
