--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-25-06",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Abhinesh612.github.io/Abhinesh-porfolio",
+  "homepage": "https://Abhinesh612.github.io/Abhinesh",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -23,8 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-	"predeploy": "npm run build",
-	"deploy": "gh-pages -d build"
+	  "predeploy": "npm run build",
+	  "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
